--- a/index.html
+++ b/index.html
@@ -646,11 +646,11 @@
 
             <div class="footer-col">
                 <h4>Légal</h4>
-                <ul>
-                    <li><a href="#">Mentions Légales</a></li>
-                    <li><a href="#">Politique de Confidentialité</a></li>
-                    <li><a href="#">CGV</a></li>
-                </ul>
+    <ul>
+        <li><a href="mentions.html" target="_blank">Mentions Légales</a></li>
+        <li><a href="confidentialite.html" target="_blank">Politique de Confidentialité</a></li>
+        <li><a href="cgv.html" target="_blank">CGV</a></li>
+    </ul>
             </div>
 
             <div class="footer-col">
@@ -667,4 +667,5 @@
     </footer>
 
 </body>
+
 </html>
