--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
             </div>
 
             <div class="contact-form">
+                <form action="https://formspree.io/f/xrbnkjqk" method="POST">
                 <form>
                     <div class="form-group">
                         <label>Votre Nom</label>
@@ -669,4 +670,5 @@
 </body>
 
 </html>
+
 
