--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     <i class="fas fa-clock"></i> Lun - Ven : 08h - 18h
                 </div>
 
-                <a href="#" class="calendly-btn">
+                <a href="https://calendly.com/martignymathieu/audit-gratuit-20-min" class="calendly-btn">
                     <i class="fas fa-calendar-alt"></i> Réserver un créneau
                 </a>
             </div>
@@ -670,5 +670,6 @@
 </body>
 
 </html>
+
 
 
