--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     <i class="fas fa-clock"></i> Lun - Ven : 08h - 18h
                 </div>
 
-                <a href="https://calendly.com/martignymathieu/audit-gratuit-20-min" class="calendly-btn">
+                <a href="javascript:void(0);" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/martignymathieu/audit-gratuit-20-min'});return false;" class="calendly-btn">
                     <i class="fas fa-calendar-alt"></i> Réserver un créneau
                 </a>
             </div>
@@ -669,6 +669,7 @@
 </body>
 
 </html>
+
 
 
 
